[package]
name = "mollu-engine"
description = "Domain-agnostic part-composition engine: typed connector graph, capability sandbox, IR pipeline executor"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
